fixed row gap

--- a/src/sections/BuyBook/BuyBook.module.scss
+++ b/src/sections/BuyBook/BuyBook.module.scss
@@ -41,11 +41,7 @@
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    row-gap: 15px;
-
-    @media (max-width: 425px) {
-      row-gap: 30px;
-    }
+    row-gap: 30px;
 
     .inputContainer {
       position: relative;
